# llama3-hackathon

./: .gitignore
llama3/: .gitignore  00_START_HERE.md  CHANGES.md  CONCURRENCY_FIX_GUIDE.md  CopilotPrompt.md  DEBUG_LOGGING_GUIDE.md  DIAGRAM_ENHANCEMENT_GUIDE.md  DIAGRAM_ENHANCEMENT_TEMPLATES.md  DIAGRAM_VISUAL_MARKUP.md  FIX_AUTO_QUIT_ISSUE.md  FIX_MESSAGES_NOT_SHOWING.md  GENERIC_MODE_UPDATE.md  HOP_SUBGRAPH_FIX_EXPLANATION.md  LAM_ARCHITECTURE_DIAGRAMS.md  LAM_DOCUMENTATION_INDEX.md  LAM_PRACTICAL_GUIDE.md  LAM_PROJECT_SUMMARY.md  LAM_QUICK_REFERENCE.md  LAM_SLIDES_GUIDE.md  MAZE_LAM_PROMPT_IMPROVEMENT.md  MERMAID_DIAGRAMS_LAM_MAZE.md  MERMAID_USAGE_GUIDE.md  PAPER_ABSTRACT.md  QUANTIZATION_GUIDE.md  QUICK_API_REFERENCE.md  QWEN3_30B_OPTIMIZATION_GUIDE.md  RACING_GAME_README.md  README.md  README_DOCUMENTATION.md  STREAMING_SUPPORT.md  SUBGRAPH_CLASSIFICATION_README.md  VLLM_DEPLOY_README.md  build_knowledge_graph.py  debug_main.py  demo.py  enhanced_subgraph_classifier.py  kg_loader.py  lam_mqtt_deploy.py  lam_mqtt_hackathon_deploy.py  lam_mqtt_hackathon_test.py  (+25 more)
llama3/.github/ISSUE_TEMPLATE/: bug_report.md
llama3/Hackathon/: README.md  entities.py  main.py  maze.py  maze_lam_client.py  rl_agent.py  rl_env.py  train_rl.py  ui.py
llama3/Hackathon/prompt-portal/backend_cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  build.sh
llama3/Hackathon/prompt-portal/backend_cpp/config/: config.json
llama3/Hackathon/prompt-portal/backend_cpp/include/: auth.hpp  config.hpp  database.hpp  llm_client.hpp  models.hpp
llama3/Hackathon/prompt-portal/backend_cpp/include/handlers/: auth_handler.hpp  health_handler.hpp  leaderboard_handler.hpp  llm_handler.hpp  template_handler.hpp  user_handler.hpp
llama3/Hackathon/prompt-portal/backend_cpp/include/middleware/: cors.hpp
llama3/Hackathon/prompt-portal/backend_cpp/include/utils/: jwt_utils.hpp  password.hpp
llama3/Hackathon/prompt-portal/backend_cpp/src/: auth.cpp  database.cpp  llm_client.cpp  main.cpp
llama3/Hackathon/prompt-portal/backend_cpp/src/handlers/: auth_handler.cpp  health_handler.cpp  leaderboard_handler.cpp  llm_handler.cpp  template_handler.cpp  user_handler.cpp
llama3/Hackathon/prompt-portal/backend_cpp/src/middleware/: cors.cpp
llama3/Hackathon/prompt-portal/backend_cpp/src/utils/: jwt_utils.cpp  password.cpp
llama3/KG-LLM/: SOTA_KGLLM.py  eval_KGLAM.py
llama3/KG-LLM-20251110/: ARCHITECTURE.md  BUG_FIXES_SUMMARY.md  ENTITY_ID_MAPPING_GUIDE.md  ENTITY_ID_MAPPING_ISSUES.md  ENTITY_MAPPING_CHANGES.md  ENTITY_MAPPING_FINAL_REPORT.md  ENTITY_MAPPING_FIX.md  ENTITY_MAPPING_INDEX.md  ENTITY_MAPPING_README.md  ENTITY_MAPPING_SUMMARY.md  ENTITY_NAME_MAPPING_GUIDE.md  FIX_SUMMARY.txt  FLEXIBLE_MATCHING.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LLM_WITHOUT_PATHS_UPDATE.md  OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.txt  QUICK_START.md  README.md  REALTIME_ACCURACY_CHECKPOINTING.md  WEBQSP_INTEGRATION.md  WEBQSP_SUCCESS.py  analyze_entity_mapping.py  analyze_results.py  answer_predictor.py  answer_predictor_fast.py  batch_inference_processor.py  build_entity_name_map.py  config.py  config_fast.py  eperm_system.py  evidence_path_finder.py  evidence_path_finder_fast.py  evidence_path_finder_nonllm.py  example_usage.py  explore_webqsp.py  knowledge_graph.py  llm_client.py  (+21 more)
llama3/KG-LLM-NEW/: .gitignore  PARQUET_QUICKREF.md  README.md  example_parquet_config.py  test_parquet_integration.py  webqsp_predictions.json  webqsp_predictions_kg.json  webqsp_predictions_sample.json  webqsp_predictions_sample.summary.json  webqsp_summary.json  webqsp_summary_kg.json  webqsp_test.jsonl  webqsp_train.jsonl  weights.json
llama3/Meta-LLAMA3/: demo.py  lam_mqtt_hackathon_deploy.py  mqtt_deploy_driving.py  mqtt_deploy_driving_scene4.py
llama3/OwOGPT/: AUTO_SESSION_RESET.md  FIX_APPLIED.md  IMAGE_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TEMPLATE_AUTO_RESET_SUMMARY.md  TEMPLATE_PERSISTENCE.md
llama3/SST/: maintain_tunnel_sst.bat  publicip_server_whisper_sst.py
llama3/TTS/: client_example.py  client_kokoro_tts.py  maintain_tunnel_tss.bat  publicip_server_kokoro_tts.py  server_kokoro_tts.py  server_tts.py
llama3/WebQSP/: LabelWebQSP.py
llama3/debug_dialogs/: debug_dialog_079a7629-7bdb-4937-806f-e3ec650f31f0.json  debug_dialog_1c83998c-7246-4699-865f-74f06224e26e.json  debug_dialog_22f6c0f1-b609-451d-a4a3-11a94dbb855c.json  debug_dialog_3f16f073-9b56-4d19-bc7d-71ed816d6b34.json  debug_dialog_8529442e-d4a0-4b48-badf-d85cba1f5074.json  debug_dialog_925a79ea-4e52-4e6b-82f5-722ea54f093d.json  debug_dialog_b879c106-94c5-4ca9-95af-e62e66886bf5.json  debug_dialog_bfab9037-bd76-4f65-9d21-fe6c7e030102.json  debug_dialog_cbbdd8da-b7a5-4938-a0d5-16d514b4fc13.json
llama3/deployment/: CHANGES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  MACHINE_B_DEPLOYMENT.md  MACHINE_C_SETUP.md  PORT_25565_GUIDE.md  QUICK_REFERENCE_MACHINE_C.md  example_client.py  openai_compat_readme.md  openai_compat_server.py  openrouter.py  run_openai_proxy.ps1  test_openai_proxy.py
llama3/deployment/cpp_backend/: CMakeLists.txt
llama3/deployment/cpp_backend/include/: config.hpp  server.hpp
llama3/docs/: CLIENT_INTERFACE_PREVIEW.md  CODE_CHANGES.md  CONCURRENT_PROCESSING_FIX.md  CUSTOM_SYSTEM_PROMPT_GUIDE.md  LAM_MAZE_PROMPT_QUICK_REFERENCE.md  MAZE_LAM_GUIDE.md  OPENAI_API_UPDATE.md  OPENAI_PACKAGE_COMPLETION_CHECKLIST.md  OPENAI_PACKAGE_MIGRATION.md  OPENAI_PACKAGE_MIGRATION_SUMMARY.md  OPENAI_PACKAGE_QUICK_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  THINKING_MODE_GUIDE.md  VLLM_DESIGN_SUMMARY.md  WEB_MQTT_INTEGRATION.md
llama3/llama/: generation.py
llama3/llamacppWeb/: .env.docker  DEPLOYMENT_GUIDE.md  Dockerfile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  app.py  docker-compose.yml  mosquitto.conf  requirements.txt  test_mqtt.py
llama3/scripts/: kg_build.sh  kg_query.sh  kg_question_retrieval.sh  kg_subgraph_classify.sh  kg_subgraph_enhanced.sh
llama3/utils/: load_parquet.py
(+472 files in other folders)
